Utility class and String Extension

--- a/HookInterfaceCreator/Config/App.config
+++ b/HookInterfaceCreator/Config/App.config
@@ -2,7 +2,7 @@
 <configuration>
 	<appSettings>
 		<add key="JsonPath" value="C:\Users\William\source\repos\HookInterfaceCreator\HookInterfaceCreator\Data\hooks.json" />
-		<add key="Key1" value="1" />
-		<add key="Key2" value="2" />
+		<add key="Output" value="C:\Users\William\source\repos\HookInterfaceCreator\HookInterfaceCreator\Output\" />
+		<add key="Package" value="api.utilities.internal" />
 	</appSettings>
 </configuration>
